--- a/src/app/pages/drag-and-drop-file/drag-and-drop-file.component.html
+++ b/src/app/pages/drag-and-drop-file/drag-and-drop-file.component.html
@@ -41,7 +41,7 @@
       </div>
       <div class="info">
         <h4 class="name">
-          {{ file?.name }}
+          {{ file?.lastModified }}
         </h4>
         <p class="size">
           <!-- {{ formatBytes() }} -->
