--- a/src/app/pages/setting/job/job.component.html
+++ b/src/app/pages/setting/job/job.component.html
@@ -38,9 +38,9 @@
       {{row.date_of_acceptance ? formatTime(row.date_of_acceptance) : ''}}
     </ng-template>
   </ngx-datatable-column>
-  <ngx-datatable-column name="วันที่ส่งแบบ" prop="data_of_submission">
+  <ngx-datatable-column name="วันที่ส่งแบบ" prop="date_of_submission">
     <ng-template let-row="row" ngx-datatable-cell-template>
-      {{row.data_of_submission ? formatTime(row.data_of_submission) : ''}}
+      {{row.date_of_submission ? formatTime(row.date_of_submission) : ''}}
     </ng-template>
   </ngx-datatable-column>
   <ngx-datatable-column name="ACTION">
