--- a/src/app/pages/create-work-sheet/create-work-sheet.component.html
+++ b/src/app/pages/create-work-sheet/create-work-sheet.component.html
@@ -333,21 +333,8 @@
               <input
                 type="date"
                 formControlName="dueDate"
-                class="w-full rounded-lg border-gray-300 shadow-sm focus:ring-2 focus:ring-blue-500 transition duration-200 pr-10"
+                class="mt-1 block w-full rounded-md"
               />
-              <svg
-                class="w-5 h-5 absolute right-3 top-1/2 -translate-y-1/2 text-gray-400"
-                fill="none"
-                stroke="currentColor"
-                viewBox="0 0 24 24"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"
-                />
-              </svg>
             </div>
           </div>
         </div>
