--- a/src/app/pages/home/seller/seller.component.scss
+++ b/src/app/pages/home/seller/seller.component.scss
@@ -55,3 +55,27 @@
     transform: scale(1.05);
     /* ขยายเล็กน้อย */
 }
+
+.status-pill.active {
+    background-color: #007bff;
+}
+
+.status-pill.active::after {
+    content: '';
+    display: absolute;
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+    height: 2px;
+    background-color: #007bff;
+}
+
+ion-card {
+    margin: 0;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+}
+
+ion-item {
+    --background: transparent;
+    --border-color: transparent;
+}
